# rinha-de-compiladores

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yaml  run.sh  start.sh
.github/workflows/: build-docker.yml
scripts/: build.sh  run-compose.sh  run.sh
src/: CMakeLists.txt  main.cpp
src/inc/: file.hpp  terms.hpp  types.hpp
var/rinha/: hello.json  info.txt
